# easy_reader

./: .travis.yml  Cargo.toml  README.md
benches/: benchmarks.rs
resources/: fatty_lipsum_lf  file-with-blank-line-at-the-beginning  test-file-crlf  test-file-lf
src/: lib.rs  tests.rs
