[package]
name = "easy_reader"
version = "0.5.0"
authors = ["Michele Federici (@ps1dr3x) <michele@federici.tech>"]
description = "Move forward, backward or randomly through the lines of huge files. Easily and fastly."
repository = "https://github.com/ps1dr3x/easy_reader"
license = "Apache-2.0"
keywords = ["lines", "reader", "reverse", "backwards", "random"]
readme = "README.md"
edition = "2018"

[dependencies]
rand = { version = "~0.7", optional = true }
fnv = "~1.0"

[features]
default = ["rand"]

[dev-dependencies]
criterion = "~0.3"

[[bench]]
name = "benchmarks"
harness = false
