[package]
name = "easy_reader"
version = "0.5.2"
authors = ["Michele Federici (@ps1dr3x) <michele@federici.tech>"]
description = "A Rust library for easily navigating forward, backward or randomly through the lines of huge files."
repository = "https://github.com/ps1dr3x/easy_reader"
license = "Apache-2.0"
keywords = ["lines", "reader", "reverse", "backwards", "random"]
readme = "README.md"
edition = "2018"

[dependencies]
rand = { version = "~0.8", optional = true }
fnv = "~1.0"

[features]
default = ["rand"]

[dev-dependencies]
criterion = "~0.3"

[[bench]]
name = "benchmarks"
harness = false
